add swagger config to announcements
